# ChangeLog for app-emulation/wine
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/wine/ChangeLog,v 1.200 2007/12/29 11:11:49 vapier Exp $

  29 Dec 2007; Mike Frysinger <vapier@gentoo.org> wine-0.9.52.ebuild:
  Add USE=samba to force lazy people to upgrade their samba #195621 and
  auto-install the gecko cab when USE=gecko #197443 by Jacek Caban.

*wine-0.9.52 (28 Dec 2007)

  28 Dec 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.52.ebuild:
  Version bump.

  22 Dec 2007; Mike Frysinger <vapier@gentoo.org>
  +files/wine-0.9.51-valgrind.patch, wine-0.9.51.ebuild:
  Fix building with newer valgrinds #202542.

*wine-0.9.51 (16 Dec 2007)

  16 Dec 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.51.ebuild:
  Version bump.

*wine-0.9.50 (01 Dec 2007)

  01 Dec 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.50.ebuild:
  Version bump.

  20 Nov 2007; Joe Peterson <lavajoe@gentoo.org> wine-0.9.49.ebuild:
  Added ~x86-fbsd keyword

*wine-0.9.49 (09 Nov 2007)

  09 Nov 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.49.ebuild:
  Version bump.

*wine-0.9.48 (27 Oct 2007)

  27 Oct 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.48.ebuild:
  Version bump.

*wine-0.9.47 (13 Oct 2007)

  13 Oct 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.47.ebuild:
  Version bump.

*wine-0.9.46 (28 Sep 2007)

  28 Sep 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.46.ebuild:
  Version bump.

*wine-0.9.45 (14 Sep 2007)

  14 Sep 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.45.ebuild:
  Version bump.

*wine-0.9.44 (24 Aug 2007)

  24 Aug 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.44.ebuild:
  Version bump.

*wine-0.9.43 (12 Aug 2007)

  12 Aug 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.43.ebuild:
  Version bump.

*wine-0.9.42 (28 Jul 2007)

  28 Jul 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.42.ebuild:
  Version bump.
