@@ -130,6 +130,7 @@ DIST wine-0.9.5.tar.bz2 10394362 RMD160 1bcbceeffd8c08b1906c658a548b58514822dd24
 DIST wine-0.9.50.tar.bz2 12891197 RMD160 86dad0b766025bcfbe7b49a27195ac8cd2362103 SHA1 5a4111e60b2e38f3eb0a2b4d9bc3de55498be5c1 SHA256 8ffeab0d4e010499f89b673f3019492d463f41bf585cca6e91c928e69a5174c7
 DIST wine-0.9.51.tar.bz2 12962782 RMD160 96dd0290679530d363f99f0997ea37748710605c SHA1 d08a4c4cd1f21859e25902bf634e13277d3e89e0 SHA256 0cd86ded13eb25d0d1339e1bd8dc787143dd1db278fead5bb18ab47e4a95df3c
 DIST wine-0.9.52.tar.bz2 12966473 RMD160 686b2b5f4c7aff2167a6710b1b392bc282c3768a SHA1 2b7e7cf92691139245ca5d7a026db55d92107355 SHA256 de3fabb72b69b088ff5c8f769e9478bdc07ff3a247428c660e12ac5cae3b6026
+DIST wine-0.9.53.tar.bz2 13064017 RMD160 19f0596d987b1b7da8b33c98e84c6484ad6914ae SHA1 be61c0bead88e85b178c29d7026f54bf72a6540a SHA256 06317d78b7db39458656b6acc6b265ce97f358aefd7ded679263f397a89f1200
 DIST wine-0.9.6.tar.bz2 10454441 RMD160 5fb3005c84318e837782bd1b78d0694f3f7ce576 SHA1 8fde8657c67929da25449431cfa7baebb36add4f SHA256 13385d0baad5d63a59e69611852c4ed1c30fccf7c11ec16aa37740c0e1057d70
 DIST wine-0.9.7.tar.bz2 10503641 RMD160 4244d45f9167292301c4ba60417d7119567b000d SHA1 91ea378d55bd76f814a086b13147c1d39d73b874 SHA256 c48bb18fd89b7ffd21931fcc258b8f3d8ce30f0a57c9e1a78569b6861fc1b1e4
 DIST wine-0.9.8.tar.bz2 10563571 RMD160 54b44b3733cb1628189830e3e8295efa848af6f1 SHA1 a1f7e397ed11f69515c228151eb359bd17974601 SHA256 6e6442aec2a889f04897ad739b863abec05c320a6f43c12198914cf7f830ee48
@@ -329,6 +330,10 @@ EBUILD wine-0.9.52.ebuild 3526 RMD160 a81c28286820f3d84cebc8de3fa0ad774bf1110a S
 MD5 044609fced1e8dcaec8b8fbdd9dc02c5 wine-0.9.52.ebuild 3526
 RMD160 a81c28286820f3d84cebc8de3fa0ad774bf1110a wine-0.9.52.ebuild 3526
 SHA256 cb32cf56f224714463a6ea21210f5cabc5c26422af0e133e41f575dce693e31c wine-0.9.52.ebuild 3526
+EBUILD wine-0.9.53.ebuild 3526 RMD160 c105fd203c5696b468d5cf76514c303cf2545c4e SHA1 b58f49dad56556bc3da617d967e5fc37d1482938 SHA256 41ca9d61933e47f57b752d8f9da2ed1b5200fec102b2ede4c53d4c74552c8aef
+MD5 7f4e9c27afe053fb41791c2d4a1f9b58 wine-0.9.53.ebuild 3526
+RMD160 c105fd203c5696b468d5cf76514c303cf2545c4e wine-0.9.53.ebuild 3526
+SHA256 41ca9d61933e47f57b752d8f9da2ed1b5200fec102b2ede4c53d4c74552c8aef wine-0.9.53.ebuild 3526
 EBUILD wine-0.9.6.ebuild 3992 RMD160 0c62501cc18cf8ff136168c08d9b17b10212010d SHA1 30801571e807b0bf7256397818653d906bd5399a SHA256 b29da96f895c70be8c41c5ba4fac6919d4034b62ed7ef2c5ee0eda71dd417eac
 MD5 2c0eac8aab2a8531c70583e6fb11c924 wine-0.9.6.ebuild 3992
 RMD160 0c62501cc18cf8ff136168c08d9b17b10212010d wine-0.9.6.ebuild 3992
@@ -389,10 +394,10 @@ EBUILD wine-9999.ebuild 3155 RMD160 656c808a5b3b46d61f236abb7d46d12fde9fa030 SHA
 MD5 c66e557289c63602125708f6d34f1c73 wine-9999.ebuild 3155
 RMD160 656c808a5b3b46d61f236abb7d46d12fde9fa030 wine-9999.ebuild 3155
 SHA256 8525b3cba9ec1706c4b25a42e9f3124c077eea2b5bae1ad94ac599409055e1dc wine-9999.ebuild 3155
-MISC ChangeLog 36642 RMD160 7a8886095ec5aa10aef70483d7b69ae9350e8de2 SHA1 fe4edf2d5f137e6b9f42fafff4b5967ee405abee SHA256 8731af4b4a6e5931372529cb781c22bb49d492c6d5fe77ebf6336e9f82441a36
-MD5 803a39d1aad2838a308afd9cb7ce63d8 ChangeLog 36642
-RMD160 7a8886095ec5aa10aef70483d7b69ae9350e8de2 ChangeLog 36642
-SHA256 8731af4b4a6e5931372529cb781c22bb49d492c6d5fe77ebf6336e9f82441a36 ChangeLog 36642
+MISC ChangeLog 36758 RMD160 93df511cb100017eb7b2bcbf0fa3245c15bb44dd SHA1 c77522de1e81c422bc861248f81678833ee23fd0 SHA256 9d8302119a6b4a5c15090e8247ac9475c3861a53045938a0d48c8d345034f090
+MD5 570156cebc571a5c3874a8ad44c0c3dd ChangeLog 36758
+RMD160 93df511cb100017eb7b2bcbf0fa3245c15bb44dd ChangeLog 36758
+SHA256 9d8302119a6b4a5c15090e8247ac9475c3861a53045938a0d48c8d345034f090 ChangeLog 36758
 MISC metadata.xml 791 RMD160 2c8f8f40729fde13d93730374ee39811c29c20de SHA1 331dfb5419d6b26502b33bc4e00a2fa4b3301a1a SHA256 6ad20d106c155d738b1ac41ccdb5ee8495c42129fd53308e641414e345d7e018
 MD5 78959654c62738e9d3ff3302e974d98a metadata.xml 791
 RMD160 2c8f8f40729fde13d93730374ee39811c29c20de metadata.xml 791
@@ -544,6 +549,9 @@ SHA256 c0c277af95b6396f089a8e6aae387799108a81586a0e7c3ef3b45a86867efe6d files/di
 MD5 a266854191b8625767cce5c9e2cb53d5 files/digest-wine-0.9.52 488
 RMD160 051f91614c0d0b76ed483441c995946b61f38172 files/digest-wine-0.9.52 488
 SHA256 79215b00d633d572d2797358c598c3907e6b22d94fcef35737f68249ea769ac0 files/digest-wine-0.9.52 488
+MD5 b6a7924048dd229f0c43d7bfda07fb42 files/digest-wine-0.9.53 488
+RMD160 6821cafce70b564e424c32c3bf48163e99dec290 files/digest-wine-0.9.53 488
+SHA256 640bdce33d4f5953e26c16aa82ee65f2a681573fec67fa84a2ca4251298fd079 files/digest-wine-0.9.53 488
 MD5 039621b36e2a0b7b840dc3afef8e4ecc files/digest-wine-0.9.6 176
 RMD160 90a7659326320ef2e8376baa92631b7ae467040a files/digest-wine-0.9.6 176
 SHA256 4f0182a7f274fd2bf5946730955c0fa04eb51416442f3557e8d08497333216ca files/digest-wine-0.9.6 176
@@ -589,7 +597,7 @@ SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.8 (GNU/Linux)
 
-iEYEARECAAYFAkd2K1cACgkQj9hvisErhMIPgQCgiBTG1Y7dbaaN1TqMVMJIr5hd
-c/YAoKyJmXiFSKh20dzUFnXoseuwtPw3
-=cHVQ
+iEYEARECAAYFAkeHy64ACgkQj9hvisErhMJmdQCfYbFzC2mfZ5749ncgYIrg7aXE
+9YYAoI+QCcVkdGW+8ow1Mc2/oS4NWzwY
+=IiZ6
 -----END PGP SIGNATURE-----
