@@ -1,0 +1,6 @@
+MD5 48fe690c6f37302401adde4cf5db7c19 wine-0.9.53.tar.bz2 13064017
+RMD160 19f0596d987b1b7da8b33c98e84c6484ad6914ae wine-0.9.53.tar.bz2 13064017
+SHA256 06317d78b7db39458656b6acc6b265ce97f358aefd7ded679263f397a89f1200 wine-0.9.53.tar.bz2 13064017
+MD5 b188c296f045d20abdb11e9c0564894b wine_gecko-0.1.0.cab 5746895
+RMD160 61f85ee39e96f88783541460d2fce31db7cc0183 wine_gecko-0.1.0.cab 5746895
+SHA256 4ef0bffa49a9abc86f74257aa8d7f5db806e8e8bd780149244149aa3f9292d10 wine_gecko-0.1.0.cab 5746895
