@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/wine
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/wine/ChangeLog,v 1.200 2007/12/29 11:11:49 vapier Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/wine/ChangeLog,v 1.201 2008/01/11 20:03:50 vapier Exp $
+
+*wine-0.9.53 (11 Jan 2008)
+
+  11 Jan 2008; Mike Frysinger <vapier@gentoo.org> +wine-0.9.53.ebuild:
+  Version bump.
 
   29 Dec 2007; Mike Frysinger <vapier@gentoo.org> wine-0.9.52.ebuild:
   Add USE=samba to force lazy people to upgrade their samba #195621 and
